--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -33,7 +33,7 @@
           />
           <img
             class="advantages-picture"
-            src="./img/advantages/organic-m"
+            src="./img/advantages/organic-m.jpg"
             alt="natural materials"
             width="288"
             height="198"
@@ -70,7 +70,7 @@
           />
           <img
             class="advantages-picture"
-            src="./img/advantages/strength-m"
+            src="./img/advantages/strength-m.jpg"
             alt="hands of a craftsman working on creating a bag"
             width="288"
             height="198"
@@ -107,7 +107,7 @@
           />
           <img
             class="advantages-picture"
-            src="./img/advantages/modern-style-m"
+            src="./img/advantages/modern-style-m.jpg"
             alt="three bags"
             width="288"
             height="198"
