--- a/src/css/assortment.css
+++ b/src/css/assortment.css
@@ -1,3 +1,7 @@
+.assortment {
+    padding: 32px 0;
+}
+
 .assortment-title {
     font-weight: 700;
     font-size: 36px;
@@ -6,10 +10,6 @@
     text-align: center;
     padding: 32px 16px;
     font-family: "Comfortaa", sans-serif;
-}
-
-.assortment {
-    padding: 64px 0;
 }
 
 .assortment-ul {
@@ -82,6 +82,14 @@
         width: 768px;
     }
 
+    .assortment {
+        padding: 64px 0;
+    }
+
+    .assortment-title {
+        padding-top: 0px;
+    }
+
     .assortment-ul {
         gap: 48px 24px;
         justify-content: center;
@@ -93,7 +101,6 @@
 
     .assortment-div {
         width: 340px;
-        margin: 16px 0;
         height: 113px;
     }
 
@@ -110,11 +117,7 @@
 @media screen and (min-width: 1440px) {
 
     .assortment-title {
-        font-weight: 700;
         font-size: 48px;
-        line-height: 120%;
-        letter-spacing: 0.01em;
-        text-align: center;
         padding: 0 0 32px 0;
         font-family: "Comfortaa", sans-serif;
     }
@@ -130,12 +133,15 @@
 
     .assortment-div {
         width: 310px;
-        margin: 16px 0;
-        height: 113px;
+    }
+
+    ul li:nth-child(5) .assortment-div,
+    ul li:nth-child(8) .assortment-div {
+        margin-top: 27px;
+        margin-bottom: 5px;
     }
 
     .assortment img {
-        border-radius: 32px;
         width: 310px;
     }
 
