--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
 <header class="page-header">
   <div class="container header-container">
     <nav class="header-nav">
-      <a href="/index.html" class="logo-link">
+      <a href="index.html" class="logo-link">
         <img src="/img/logo.svg" alt="website logo" width="84" height="36" />
       </a>
       <ul class="nav-list d-none">
@@ -52,7 +52,7 @@
     <!-- <div class="mobile-header"> -->
     <div class="mobile-menu-container">
       <div class="mob-logo">
-        <a href="/index.html" class="logo-link">
+        <a href="index.html" class="logo-link">
           <img src="/img/logo.svg" alt="website logo" width="84" height="36" />
         </a>
       </div>
