--- a/src/css/about.css
+++ b/src/css/about.css
@@ -4,8 +4,8 @@
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    width: 320px;
-    height: 348px;
+    width: 100%;
+  
  
 }
 @media (min-width: 0px) and (min-resolution: 192dpi) {
@@ -51,8 +51,7 @@
 @media screen and (min-width: 768px) {
     .about-container {
         background-image: url(/img/about/about-tab-1x.jpg);
-        width: 768px;
-        height: 325px;
+        width: 100%;
         margin: 0 auto;
     }
      .about-title {
@@ -77,8 +76,7 @@
 @media screen and (min-width: 1440px) {
      .about-container {
         background-image: url(/img/about/about-desk-1x.jpg);
-        width: 1440px;
-        height: 462px;
+        width: 100%;
         margin: 0 auto;
         
      }     
