--- a/src/css/about.css
+++ b/src/css/about.css
@@ -4,8 +4,8 @@
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    width: 100%;
-  
+    width: 100%px;
+    height: 348px;
  
 }
 @media (min-width: 0px) and (min-resolution: 192dpi) {
@@ -42,16 +42,17 @@
     line-height: 1.6;
     text-align: center;
     color: #fff;
-    padding: 16px;
-    margin: 0 auto;
     max-width: 288px;
+    margin: 0 auto;
+    padding-top: 20px;
     
 }
 
 @media screen and (min-width: 768px) {
     .about-container {
         background-image: url(/img/about/about-tab-1x.jpg);
-        width: 100%;
+        width: 100%px;
+        height: 325px;
         margin: 0 auto;
     }
      .about-title {
@@ -61,9 +62,9 @@
 @media screen and (min-width: 768px) {
         .about-text {
         font-size: 18px;
-        max-width: 590px;
+        max-width: 573px;
         margin: 0 auto;
-        padding-bottom: 80px;
+        margin-top: 12px;
     }
 }
 @media (min-width: 768px) and (min-resolution: 192dpi) {
@@ -77,6 +78,7 @@
      .about-container {
         background-image: url(/img/about/about-desk-1x.jpg);
         width: 100%;
+        height: 462px;
         margin: 0 auto;
         
      }     
@@ -91,20 +93,18 @@
         font-size: 56px;
         max-width: 629px;
         margin: 0 auto;
-       
     }
 
 }
 @media screen and (min-width: 1440px) {
     .about-title {
         padding-top: 112px;
-        padding-bottom: 24px;
     }
 }
 @media screen and (min-width: 1440px) {
         .about-text {
         font-size: 18px;
-        max-width: 600px;
-       
+        max-width: 573px;
+        margin-top: 12px;
     }
 }
