--- a/src/css/about.css
+++ b/src/css/about.css
@@ -5,6 +5,7 @@
     background-size: cover;
     margin: 0 auto;
     width: 100%;
+    height: 348px;
   
  
 }
@@ -52,6 +53,7 @@
     .about-container {
         background-image: url(/img/about/about-tab-1x.jpg);
         width: 100%;
+        height: 325px;
         margin: 0 auto;
     }
      .about-title {
@@ -77,6 +79,7 @@
      .about-container {
         background-image: url(/img/about/about-desk-1x.jpg);
         width: 100%;
+        height: 462px;
         margin: 0 auto;
         
      }     
